Fix live message handling
